[package]
name = "hyper-reverse-proxy"
version = "0.5.2-dev"
authors = [
  "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
  "Felipe Noronha <felipenoris@gmail.com>",
  "Jan Kantert <jan-hyper-reverse-proxy@kantert.net>",
]
license = "Apache-2.0"
description = "A simple reverse proxy, to be used with Hyper and Tokio."
homepage = "https://github.com/felipenoris/hyper-reverse-proxy"
documentation = "https://docs.rs/hyper-reverse-proxy"
repository = "https://github.com/felipenoris/hyper-reverse-proxy"
keywords = ["http", "hyper"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
edition = "2018"

include = ["Cargo.toml", "LICENSE", "src/**/*"]

[[bench]]
name="internal"
harness = false

[dependencies]
hyper = { version = "1.0", default-features = false }
lazy_static = "1.4.0"
tokio = { version = "1.17.0", default-features = false }
tracing = { default-features = false, version = "0.1.34" }
thiserror = "1.0"
hyper-util = { version = "0.1.10", features = ["http1", "client-legacy"] }
http-body-util = "0.1.2"

[dev-dependencies]
hyper = { version = "1.0", features = ["server"] }
futures = "0.3.31"
async-tungstenite = { version = "0.28", features = ["tokio-runtime"] }
tokio-test = "0.4.2"
test-context = "0.4.1"
rand = "0.8.5"
tungstenite = "0.24"
url = "2.2"
criterion = "0.4"
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "server", "server-graceful", "tokio"] }
tokiotest-httpserver = { git = "https://github.com/fransklaver/tokiotest-httpserver", rev = "3c2368b7133023fce6ddb567c0b44268386b12ee" }

[features]

__bench=[]
